--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,9 +11,9 @@ spring:
       filters: stat
       driver-class-name: com.mysql.cj.jdbc.Driver
       #基本属性
-      url: jdbc:mysql://localhost:3306/
+      url: jdbc:mysql://localhost:3306/grams?useUnicode=true&characterEncoding=utf8
       username: root
-      password: root@localhost
+      password: zhx000501
       #配置初始化大小/最大/最小
       initial-size: 5
       min-idle: 10
@@ -43,8 +43,7 @@ spring:
   thymeleaf:
     cache: false
 mybatis:
-  type-aliases-package: cn.ecnu.modana.entity
-  mapper-locations: classpath:mapper/*.xml
+  mapper-locations: classpath:Mapper/*.xml
   configuration:
     # 开启驼峰命名转换
     map-underscore-to-camel-case: true
