--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,9 +11,9 @@ spring:
       filters: stat
       driver-class-name: com.mysql.cj.jdbc.Driver
       #基本属性
-      url: jdbc:mysql://localhost:3306/grams?useUnicode=true&characterEncoding=utf8
+      url: jdbc:mysql://localhost:3306/mosiv
       username: root
-      password: zhx000501
+      password: zhq19980914
       #配置初始化大小/最大/最小
       initial-size: 5
       min-idle: 10
